[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
anyhow = "1.0"
base64 = "0.13"
bytes = "1"
image = "0.23"
lazy_static = "1"
lru = "0.7"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.9"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace" ] } # http 中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3" # 日志和追踪

[build-dependencies]
prost-build = "0.9" # 编译 protobuf